--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,13 @@ export(parse_eml)
 export(xml_to_json)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
+importFrom(stats,setNames)
 importFrom(xml2,as_list)
 importFrom(xml2,read_xml)
+importFrom(xml2,xml_attrs)
+importFrom(xml2,xml_contents)
 importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_name)
 importFrom(xml2,xml_remove)
+importFrom(xml2,xml_text)
+importFrom(xml2,xml_type)
