--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1
-Suggests: 
+Suggests:
     testthat,
     magrittr,
     rmarkdown,
-    EML
+    EML,
+    covr
 Imports: xml2,
     jsonlite,
     jsonld
