--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,12 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
-sudo: false
+sudo: true
 cache: packages
+apt_packages:
+    - libv8-dev
+
+warnings_are_errors: true
 
 after_success:
   - Rscript -e 'covr::codecov()'
