--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,9 @@ Suggests:
     testthat,
     magrittr,
     rmarkdown,
-    EML,
     covr
 Imports: xml2,
     jsonlite,
     jsonld,
-    methods
+    methods,
+    EML
