--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,11 +17,13 @@ importFrom(xml2,xml_add_child)
 importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_contents)
 importFrom(xml2,xml_find_all)
+importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_new_document)
 importFrom(xml2,xml_new_root)
 importFrom(xml2,xml_remove)
 importFrom(xml2,xml_root)
 importFrom(xml2,xml_set_attr)
+importFrom(xml2,xml_set_namespace)
 importFrom(xml2,xml_text)
 importFrom(xml2,xml_type)
