Use a look-up table of all known classes in EML
closes #8, removes hard dependency on EML package.
Currently this is just an internal data source, could also serve as the basis for a helper function regarding possible slot names.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,9 +24,9 @@ Suggests:
     testthat,
     magrittr,
     rmarkdown,
-    covr
+    covr,
+    EML
 Imports: xml2,
     jsonlite,
     jsonld,
-    methods,
-    EML
+    methods
