sketch use cases into README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(json_to_xml,json)
 S3method(json_to_xml,list)
 export(json_to_xml)
 export(parse_eml)
+export(template)
 export(xml_to_json)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
