--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,8 +26,10 @@ Suggests:
     rmarkdown,
     covr,
     EML,
-    yaml
+    yaml,
+    knitr
 Imports: xml2,
     jsonlite,
     jsonld,
     methods
+VignetteBuilder: knitr
