Refactor to more native JSON-LD
- treats top level element (eml) as `@type`, not property of an anonymous type.
- moves xmlns namespace prefixes into @context (and back into root element for XML)
- treats context as top level element along with all other properties of the EML @type.

also add a print method

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,10 +26,10 @@ Suggests:
     rmarkdown,
     covr,
     EML,
-    yaml,
     knitr
 Imports: xml2,
     jsonlite,
     jsonld,
-    methods
+    methods,
+    yaml
 VignetteBuilder: knitr
