--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,10 @@ Suggests:
     rmarkdown,
     covr,
     EML,
-    knitr
+    knitr,
+    jqr,
+    rdflib,
+    purrr
 Imports: xml2,
     jsonlite,
     jsonld,
