rdf roundtrip, frame and compact inside as_json

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ export(as_xml)
 export(json_to_xml)
 export(template)
 export(xml_to_json)
+importFrom(jsonld,jsonld_compact)
+importFrom(jsonld,jsonld_frame)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,write_json)
