--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,20 @@
 
-## should work, but R travis has nuts
+# R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
+language: R
+cache: packages
+addons:
+  apt:
+    packages:
+      - librdf0-dev
+      - libv8-dev
+after_success:
+  - Rscript -e 'covr::codecov()'
 
-#language: R
-#sudo: true
-#cache: packages
-#apt_packages:
-#    - libv8-dev
-#    - librdf0-dev
-#warnings_are_errors: true
-#after_success:
-#  - Rscript -e 'covr::codecov()'
-
-## so we use docker:
-sudo: required
-services:
-  - docker
-script:
-  - ./test.sh
+## alternately test via docker
+#sudo: required
+#services:
+#  - docker
+#script:
+#  - ./test.sh
 
 
