first pass at TextType as literal

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,26 +7,29 @@ S3method(print,emld)
 export(as_emld)
 export(as_json)
 export(as_xml)
+export(eml_locate_schema)
+export(eml_validate)
 export(template)
 importFrom(jsonld,jsonld_compact)
 importFrom(jsonld,jsonld_frame)
-importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(methods,is)
 importFrom(stats,setNames)
 importFrom(xml2,read_xml)
 importFrom(xml2,xml_add_child)
+importFrom(xml2,xml_attr)
 importFrom(xml2,xml_attrs)
 importFrom(xml2,xml_contents)
 importFrom(xml2,xml_find_all)
 importFrom(xml2,xml_find_first)
 importFrom(xml2,xml_name)
 importFrom(xml2,xml_new_document)
-importFrom(xml2,xml_new_root)
+importFrom(xml2,xml_ns)
 importFrom(xml2,xml_remove)
 importFrom(xml2,xml_root)
 importFrom(xml2,xml_set_attr)
 importFrom(xml2,xml_set_namespace)
 importFrom(xml2,xml_text)
 importFrom(xml2,xml_type)
+importFrom(xml2,xml_validate)
 importFrom(yaml,as.yaml)
