--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,22 @@
-
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 language: R
 cache: packages
+latex: false
+
+matrix:
+  include:
+    - os: linux
+      r: devel
+    - os: linux
+      r: release
+
 addons:
   apt:
+    sources:
+      - sourceline: 'ppa:opencpu/jq'
     packages:
       - librdf0-dev
       - libv8-dev
+      - libjq-dev
 after_success:
   - Rscript -e 'covr::codecov()'
-
-## alternately test via docker
-#sudo: required
-#services:
-#  - docker
-#script:
-#  - ./test.sh
-
-
