--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,10 @@ S3method(print,emld)
 export(as_emld)
 export(as_json)
 export(as_xml)
+export(eml_locate_schema)
 export(eml_validate)
 export(template)
+importFrom(emld,as_xml)
 importFrom(jsonld,jsonld_compact)
 importFrom(jsonld,jsonld_frame)
 importFrom(jsonlite,toJSON)
