--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(as_emld,json)
 S3method(as_emld,list)
 S3method(as_emld,xml_document)
 S3method(as_json,emld)
+S3method(as_json,list)
 S3method(as_xml,emld)
 S3method(as_xml,list)
 S3method(print,emld)
