--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,7 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
 Suggests:
+    spelling,
     testthat,
     magrittr,
     rmarkdown,
@@ -34,3 +35,4 @@ Imports: xml2,
     methods,
     yaml
 VignetteBuilder: knitr
+Language: en-US
