--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: emld
 Title: Ecological Metadata as Linked Data
-Version: 0.0.1.9900
+Version: 0.0.2
 Authors@R: person("Carl", "Boettiger", 
                   email = "cboettig@gmail.com", 
                   role = c("aut", "cre", "cph"),
@@ -15,6 +15,8 @@ Description: Transform Ecological Metadata Language ('EML') files into 'JSON-LD'
              easier to work with for users and developers while maintaining a 1:1
              mapping into the original 'EML' schema. Several vignettes illustrate the
              utility of these approaches. 
+URL: https://github.com/cboettig/emld
+BugReports: https://github.com/cboettig/emld/issues
 Depends: R (>= 3.1.0)
 License: MIT + file LICENSE
 Encoding: UTF-8
