--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,15 +5,15 @@ Authors@R: c(
                 person("Carl", "Boettiger", 
                   email = "cboettig@gmail.com", 
                   role = c("aut", "cre", "cph"),
-                  comment=c(ORCID = "http://orcid.org/0000-0002-1642-628X")),
+                  comment=c(ORCID = "0000-0002-1642-628X")),
                 person("Matthew B.", "Jones", 
                   email = "jones@nceas.ucsb.edu", 
                   role = c("aut", "cph"),
-                  comment=c(ORCID = "http://orcid.org/0000-0003-0077-4738")),
+                  comment=c(ORCID = "0000-0003-0077-4738")),
                 person("Bryce", "Mecum", 
                   email = "mecum@nceas.ucsb.edu", 
                   role = c("aut", "cph"),
-                  comment=c(ORCID = "http://orcid.org/0000-0002-0381-3766"))     
+                  comment=c(ORCID = "0000-0002-0381-3766"))     
             )
 Description: This is a utility for transforming Ecological Metadata Language
         ('EML') files into 'JSON-LD' and back into 'EML.'  Doing so creates a
